k8s/sources/mq/rabbitmq/rabbitmq-istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-rabbitmq
---
kind: Service
apiVersion: v1
metadata:
  namespace: test-rabbitmq
  name: rabbitmq
  labels:
    app: rabbitmq
    type: LoadBalancer
spec:
  type: NodePort
  ports:
   - name: http
     protocol: TCP
     port: 15672
     targetPort: 15672
     nodePort: 30072
   - name: amqp
     protocol: TCP
     port: 5672
     targetPort: 5672
     nodePort: 30672
   - name: mqtt
     protocol: TCP
     port: 1883
     targetPort: 1883
     nodePort: 30883
   - name: mqtt-web
     protocol: TCP
     port: 15675
     targetPort: 15675
     nodePort: 30075
   - name: mqtt-web-ssl
     protocol: TCP
     port: 15676
     targetPort: 15676
     nodePort: 30076 
  selector:
    app: rabbitmq
---
apiVersion: apps/v1
# See the Prerequisites section of https://www.rabbitmq.com/cluster-formation.html#peer-discovery-k8s.
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: test-rabbitmq
spec:
  serviceName: rabbitmq
  # Three nodes is the recommended minimum. Some features may require a majority of nodes
  # to be available.
  replicas: 2
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      serviceAccountName: rabbitmq
      terminationGracePeriodSeconds: 10
      nodeSelector:
        # Use Linux nodes in a mixed OS kubernetes cluster.
        # Learn more at https://kubernetes.io/docs/reference/kubernetes-api/labels-annotations-taints/#kubernetes-io-os
        kubernetes.io/os: linux
      containers:
      - name: rabbitmq-k8s
        image: rabbitmq:3.8
        volumeMounts:
          - name: config-volume
            mountPath: /etc/rabbitmq
        # Learn more about what ports various protocols use
        # at https://www.rabbitmq.com/networking.html#ports
        ports:
          - name: http
            protocol: TCP
            containerPort: 15672
          - name: amqp
            protocol: TCP
            containerPort: 5672
          - name: mqtt
            protocol: TCP
            containerPort: 1883
          - name: web-mqtt
            protocol: TCP
            containerPort: 15675
          - name: web-mqtt-ssl
            protocol: TCP
            containerPort: 15676

        livenessProbe:
          exec:
            # This is just an example. There is no "one true health check" but rather
            # several rabbitmq-diagnostics commands that can be combined to form increasingly comprehensive
            # and intrusive health checks.
            # Learn more at https://www.rabbitmq.com/monitoring.html#health-checks.
            #
            # Stage 2 check:
            command: ["rabbitmq-diagnostics", "status"]
          initialDelaySeconds: 60
          # See https://www.rabbitmq.com/monitoring.html for monitoring frequency recommendations.
          periodSeconds: 60
          timeoutSeconds: 15
        readinessProbe:
          exec:
            # This is just an example. There is no "one true health check" but rather
            # several rabbitmq-diagnostics commands that can be combined to form increasingly comprehensive
            # and intrusive health checks.
            # Learn more at https://www.rabbitmq.com/monitoring.html#health-checks.
            #
            # Stage 2 check:
            command: ["rabbitmq-diagnostics", "status"]
            # To use a stage 4 check:
            # command: ["rabbitmq-diagnostics", "check_port_connectivity"]
          initialDelaySeconds: 20
          periodSeconds: 60
          timeoutSeconds: 10
        imagePullPolicy: Always
      volumes:
        - name: config-volume
          configMap:
            name: rabbitmq-config
            items:
            - key: rabbitmq.conf
              path: rabbitmq.conf
            - key: enabled_plugins
              path: enabled_plugins

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mqtt-gateway-istio
  namespace: test-rabbitmq
spec:
  selector:
    istio: ingressgateway # use Istio test-test
  servers:
  - port:
      number: 80
      name: http-service
      protocol: HTTP
    hosts:
    - "mq.koudaibook.com"
  - port:
      number: 15672
      name: http-service2
      protocol: HTTP
    hosts:
    - "mq.koudaibook.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mqtt-vservice
  namespace: test-rabbitmq
spec:
  hosts:
  - "mq.koudaibook.com"
  gateways:
  - mqtt-gateway-istio
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: rabbitmq
        port: 
          number: 15672
  - match:
    - uri:
        exact: /ws
    - uri:
        exact: /wss
    route:
    - destination:
        host: rabbitmq
        port: 
          number: 15675
