k8s/sources/mq/rabbitmq/rabbitmq-k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-rabbitmq
---
kind: Service
apiVersion: v1
metadata:
  namespace: test-rabbitmq
  name: rabbitmq
  labels:
    app: rabbitmq
    type: LoadBalancer
spec:
  type: NodePort
  ports:
   - name: http
     protocol: TCP
     port: 15672
     targetPort: 15672
     nodePort: 30072
   - name: amqp
     protocol: TCP
     port: 5672
     targetPort: 5672
     nodePort: 30672
   - name: mqtt
     protocol: TCP
     port: 1883
     targetPort: 1883
     nodePort: 30883
   - name: mqtt-web
     protocol: TCP
     port: 15675
     targetPort: 15675
     nodePort: 30075
   - name: mqtt-web-ssl
     protocol: TCP
     port: 15676
     targetPort: 15676
     nodePort: 30076 
  selector:
    app: rabbitmq
---
apiVersion: apps/v1
# See the Prerequisites section of https://www.rabbitmq.com/cluster-formation.html#peer-discovery-k8s.
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: test-rabbitmq
spec:
  serviceName: rabbitmq
  # Three nodes is the recommended minimum. Some features may require a majority of nodes
  # to be available.
  replicas: 2
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      serviceAccountName: rabbitmq
      terminationGracePeriodSeconds: 10
      nodeSelector:
        # Use Linux nodes in a mixed OS kubernetes cluster.
        # Learn more at https://kubernetes.io/docs/reference/kubernetes-api/labels-annotations-taints/#kubernetes-io-os
        kubernetes.io/os: linux
      containers:
      - name: rabbitmq-k8s
        image: rabbitmq:3.8
        volumeMounts:
          - name: config-volume
            mountPath: /etc/rabbitmq
        # Learn more about what ports various protocols use
        # at https://www.rabbitmq.com/networking.html#ports
        ports:
          - name: http
            protocol: TCP
            containerPort: 15672
          - name: amqp
            protocol: TCP
            containerPort: 5672
          - name: mqtt
            protocol: TCP
            containerPort: 1883
          - name: web-mqtt
            protocol: TCP
            containerPort: 15675
          - name: web-mqtt-ssl
            protocol: TCP
            containerPort: 15676

        livenessProbe:
          exec:
            # This is just an example. There is no "one true health check" but rather
            # several rabbitmq-diagnostics commands that can be combined to form increasingly comprehensive
            # and intrusive health checks.
            # Learn more at https://www.rabbitmq.com/monitoring.html#health-checks.
            #
            # Stage 2 check:
            command: ["rabbitmq-diagnostics", "status"]
          initialDelaySeconds: 60
          # See https://www.rabbitmq.com/monitoring.html for monitoring frequency recommendations.
          periodSeconds: 60
          timeoutSeconds: 15
        readinessProbe:
          exec:
            # This is just an example. There is no "one true health check" but rather
            # several rabbitmq-diagnostics commands that can be combined to form increasingly comprehensive
            # and intrusive health checks.
            # Learn more at https://www.rabbitmq.com/monitoring.html#health-checks.
            #
            # Stage 2 check:
            command: ["rabbitmq-diagnostics", "status"]
            # To use a stage 4 check:
            # command: ["rabbitmq-diagnostics", "check_port_connectivity"]
          initialDelaySeconds: 20
          periodSeconds: 60
          timeoutSeconds: 10
        imagePullPolicy: Always
      volumes:
        - name: config-volume
          configMap:
            name: rabbitmq-config
            items:
            - key: rabbitmq.conf
              path: rabbitmq.conf
            - key: enabled_plugins
              path: enabled_plugins

---

apiVersion: extensions/v1beta1     
kind: Ingress    
metadata:           
  name: rabbitmq-ingress
  namespace: test-rabbitmq
  annotations:           
    #不启用https强制跳转
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.org/websocket-services: "rabbitmq"
    #ingress使用那种软件 
    kubernetes.io/ingress.class: nginx
    #配置websocket 需要的配置   
    nginx.ingress.kubernetes.io/configuration-snippet: |
       proxy_set_header Upgrade "websocket";
       proxy_set_header Connection "Upgrade";
spec:      
  #tls:
  #- secretName: mqserver-koudaibook-com-cert
  #  hosts:
  #  - mqserver.koudaibook.com
  #  - mq.koudaibook.com
  rules: 
  - host: mqserver.koudaibook.com
    http:
      paths: 
        #代理websocket服务
      - path: /ws
        backend:
          serviceName: rabbitmq
          servicePort: 15675
      - path: /wss
        backend:
          serviceName: rabbitmq
          servicePort: 15676
      - path: /
        backend:
          serviceName: rabbitmq
          servicePort: 15672 

  - host: mq.koudaibook.com
    http:
      paths:
        #代理websocket服务
      - path: /ws
        backend:
          serviceName: rabbitmq
          servicePort: 15675
      - path: /wss
        backend:
          serviceName: rabbitmq
          servicePort: 15676
      - path: /
        backend:
          serviceName: rabbitmq
          servicePort: 15672
